# coronel

./: CMakeLists.txt  README.md  build.sh  notes.txt
contrib/: grub.cfg
scratch/: ext2_inode.h  parse  parse_ext2  parse_ext2.cpp  parse_ext2_2.cpp
src/: CMakeLists.txt
src/kernel/: CMakeLists.txt  archs.h  archs.hpp  config.h  config.hpp  main.cpp
src/kernel/appendix/: CMakeLists.txt  crti.S  crtn.S  cxa_guard.cpp  cxa_purevirtual.cpp  icxxabi.cpp  icxxabi.h  icxxabi.hpp
src/kernel/arch/: CMakeLists.txt  iarch.h  iarch.hpp  iprotected_mode.h  iprotected_mode.hpp
src/kernel/arch/amd64/: CMakeLists.txt  amd64.cpp  amd64.h  amd64.hpp  instructions.cpp  instructions.h  instructions.hpp  registers.h  registers.hpp
src/kernel/arch/amd64/bootstrap/: CMakeLists.txt  boot.S  coronel.ld  gdt.S  irq.cpp  irq.h  irq.hpp  isr.S  segments.cpp  segments.h  segments.hpp  syscall.S
src/kernel/arch/amd64/memory/: CMakeLists.txt  pagetable.cpp  pagetable.h  pagetable.hpp  paging.cpp  paging.h  paging.hpp
src/kernel/arch/amd64/video/: CMakeLists.txt  protected_mode.cpp  protected_mode.h  protected_mode.hpp
src/kernel/drivers/: CMakeLists.txt
src/kernel/drivers/bus/: pci.cpp  pci.h  pci.hpp
src/kernel/drivers/controllers/: ahci.cpp  ahci.h  ahci_structs.h
src/kernel/drivers/filesystems/: ext2.cpp  ext2.h  ext2_inode.h
src/kernel/drivers/peripherals/: keyboard.cpp  keyboard.h  keyboard.hpp  timer.cpp  timer.hpp
src/kernel/libs/: functional.h  functional.hpp  ilist.h  ilist.hpp  istring.h  logger.h  logger.hpp  memory.h  move.h  move.hpp  multiboot.h  multiboot.hpp  new.cpp  new.h  new.hpp  stdint.h  stdint.hpp  stdlib.h  stdlib.hpp  string.h  string.hpp  type_traits.h  type_traits.hpp  utility.h
src/kernel/memory/: CMakeLists.txt  README.md  allocators.cpp  allocators.h  allocators.hpp  heap.cpp  heap.hpp  memory_manager.cpp  memory_manager.hpp  physical.cpp  physical.h  physical.hpp  user_allocator.cpp  user_allocator.hpp  virtual.cpp  virtual.h  virtual.hpp
src/kernel/task/: task.hpp
